compiler/fir/analysis-tests/testData/resolve/constructors/erroneousDelegatedConstructorCall.kt
// INFERENCE_HELPERS
class A : <!UNRESOLVED_REFERENCE!>Undefined<!>(id(materialize()))
